--- a/ContosoUniversity/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity/ContosoUniversity.csproj
@@ -156,9 +156,24 @@
     <Compile Include="Migrations\201812200051517_InitialCreate.Designer.cs">
       <DependentUpon>201812200051517_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812200138341_MaxLengthOnNames.cs" />
+    <Compile Include="Migrations\201812200138341_MaxLengthOnNames.Designer.cs">
+      <DependentUpon>201812200138341_MaxLengthOnNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812200141055_ColumnFirstName.cs" />
+    <Compile Include="Migrations\201812200141055_ColumnFirstName.Designer.cs">
+      <DependentUpon>201812200141055_ColumnFirstName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812200208252_ComplexDataModel.cs" />
+    <Compile Include="Migrations\201812200208252_ComplexDataModel.Designer.cs">
+      <DependentUpon>201812200208252_ComplexDataModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Enrollment.cs" />
+    <Compile Include="Models\Instructor.cs" />
+    <Compile Include="Models\OfficeAssignment.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\EnrollmentDateGroup.cs" />
@@ -253,6 +268,15 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201812200051517_InitialCreate.resx">
       <DependentUpon>201812200051517_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812200138341_MaxLengthOnNames.resx">
+      <DependentUpon>201812200138341_MaxLengthOnNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812200141055_ColumnFirstName.resx">
+      <DependentUpon>201812200141055_ColumnFirstName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812200208252_ComplexDataModel.resx">
+      <DependentUpon>201812200208252_ComplexDataModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
