--- a/ContosoUniversity/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity/ContosoUniversity.csproj
@@ -175,6 +175,10 @@
     <Compile Include="Migrations\201812200636533_DepartmentSP.Designer.cs">
       <DependentUpon>201812200636533_DepartmentSP.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812200651334_RowVersion.cs" />
+    <Compile Include="Migrations\201812200651334_RowVersion.Designer.cs">
+      <DependentUpon>201812200651334_RowVersion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Department.cs" />
@@ -304,6 +308,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812200636533_DepartmentSP.resx">
       <DependentUpon>201812200636533_DepartmentSP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812200651334_RowVersion.resx">
+      <DependentUpon>201812200651334_RowVersion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
