--- a/ContosoUniversity/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity/ContosoUniversity.csproj
@@ -179,12 +179,17 @@
     <Compile Include="Migrations\201812200651334_RowVersion.Designer.cs">
       <DependentUpon>201812200651334_RowVersion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812200709073_Inheritance.cs" />
+    <Compile Include="Migrations\201812200709073_Inheritance.Designer.cs">
+      <DependentUpon>201812200709073_Inheritance.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Enrollment.cs" />
     <Compile Include="Models\Instructor.cs" />
     <Compile Include="Models\OfficeAssignment.cs" />
+    <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AssignedCourseData.cs" />
@@ -311,6 +316,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812200651334_RowVersion.resx">
       <DependentUpon>201812200651334_RowVersion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812200709073_Inheritance.resx">
+      <DependentUpon>201812200709073_Inheritance.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
